<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AssessmentList">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_title" />

            <EditText
                android:id="@+id/editText_course_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_detail_title"
                android:autofillHints="name"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_start" />

            <EditText
                android:id="@+id/editText_course_detail_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_edit_calendar_24"
                android:hint="@string/course_detail_start"
                android:autofillHints="date"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_end" />

            <EditText
                android:id="@+id/editText_course_detail_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_edit_calendar_24"
                android:hint="@string/course_detail_end"
                android:autofillHints="date"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_status" />

            <EditText
                android:id="@+id/editText_course_detail_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_detail_status"
                android:autofillHints="date"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_note" />

            <EditText
                android:id="@+id/editText_course_detail_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_detail_note"
                android:autofillHints="none"
                android:inputType="textLongMessage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_instructor_name" />

            <EditText
                android:id="@+id/editText_course_instructor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_detail_instructor_name"
                android:autofillHints="name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_instructor_phone" />

            <EditText
                android:id="@+id/editText_course_instructor_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_detail_instructor_phone"
                android:autofillHints="phone"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_detail_instructor_email" />

            <EditText
                android:id="@+id/editText_course_instructor_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_detail_instructor_email"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/item_header"
                android:text="@string/course_detail_assessments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_assessmentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_course_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/course_detail_save" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_addAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:contentDescription="@string/add_assessment_word"
        android:text="@string/new_assessment"
        app:icon="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>